--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python and session specific
+venv/
+*/venv/
+__pycache__/
+*/__pycache__/
+*.session
+backend/*.session
+telegram_sessions.db
+backend/telegram_sessions.db
+.env
+backend/.env
+frontend/.env
+*/.env
