--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "v-viewer": "^3.0.21",
+    "viewerjs": "^1.11.7",
     "vue": "^3.5.13"
   },
   "devDependencies": {
